[metadata]
name = gargantua
version = 2.1.8
author = Laisky
author-email = ppcelery@gmail.com
summary = Laisky's blog project
description-file = README.md
home-page = http://blog.laisky.com
license = MIT License
classifier =
    Development Status :: 4 - Beta
    Development Status :: 4 - Beta,
    Topic :: Software Development :: Libraries,
    Environment :: Web Environment,
    Intended Audience :: Developers,
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent,
    Programming Language :: Python,
    Programming Language :: Python :: 3.4,
keywords =
    setup
    distutils
    tornado
[files]
packages =
    gargantua
[entry_points]
console_scripts =
    run_gargantua=gargantua.__main__:main
